# review/request/file.go
@@ -6,13 +6,12 @@ package request
 
 // UploadFile define the upload file request format
 type UploadFile struct {
-	UserId      string   `json:"user_id"`
-	FileName    string   `json:"file_name"`
-	Type        string   `json:"type"`
-	IsPublic    bool     `json:"is_public"`
-	Belongs     []string `json:"belongs"` // project id
-	Description string   `json:"description"`
-	Tags        []string `json:"tags"`
+	UserId        string   `json:"user_id"`
+	FileName      string   `json:"file_name"`
+	Type          string   `json:"type"`
+	SourceProject string   `json:"source_project"`
+	Description   string   `json:"description"`
+	Tags          []string `json:"tags"`
 }
 
 // UpdateFile: define the struct for update a file version
